# pycounts

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: conf.py  einstein.txt  example.ipynb
src/pycounts/: __init__.py  datasets.py  plotting.py  pycounts.py
tests/: test_pycounts.py
