[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "A package for counting the number of words"
authors = ["Vik Geerawor <sgeerawor@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["test/*", "CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = ">=3.7.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.2", python = "^3.11"}
sphinx-autoapi = "^2.1.1"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
