[tool.poetry]
name = "pycounts"
version = "0.3.1"
description = "A package for counting the number of words"
authors = ["Vik Geerawor <sgeerawor@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["test/*", "CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
matplotlib = ">=3.7.1"
importlib-resources = "^5.12.0"
python-semantic-release = "7.28.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.2", python = "^3.11"}
sphinx-autoapi = "^2.1.1"
sphinx-rtd-theme = "^1.2.2"

[tool.semantic_release] 
version_variable = "pyproject.toml:version"     # version location
branch = "main"                                 # branch to make releases of
changelog_file =  "CHANGELOG.md"                # changelog file
build_command = "poetry build"                  # build dists
dist_path = "dist/"                             # where to put dists
upload_to_release = true                        # auto-create GitHub release
upload_to_pypi = false                          # don't auto-upload to PyPi
remove_dist = false                             # don't remove dists
patch_without_tag = true                        # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
